kubernetes/Int/deployments/default/wikijs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wikijs
spec:
    selector:
        app: wikijs
    ports:
        - name: http
          port: 3000
