kubernetes/Int/deployments/default/wikijs/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: wikijs
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:nQ3TeeF00AwOlfZ4DyCiVrdh8/0=,iv:1ne0yg+O76V0NCuE7hFX4R6mESTGNE/htTHbSBrn7Yg=,tag:TGwuS68fo6gwvwsmOUlorQ==,type:str]
          kind: Rule
          services:
            - name: wikijs
              port: 3000
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnVm1lVXpMcDBkZWhWTkZm
[...]
            cQDaMOw4QUTJB9uu3K9AMeL/CiVNjZ0V51Oujd8qjg+bUy9GzxdUzg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T18:05:24Z"
    mac: ENC[AES256_GCM,data:4X79Foq1hJSOwGj1oVi5mW83CxbL4czAhnxKTsq4+pZHtg98Jzssvdv0rrb8XpwYqwgYrdOtkl6H80vNFCzJ0STGSp9N35n/oAidNciaeBfqAD8LtwnneiK+OmrYhPk9RIJqqelRJpa58NoY+vBezuPtQtjKHlcX2qCsL/bWxl0=,iv:CwAtEp8ufHYQM2LsU/YBIgqEZEdbFcpzrMtMLzk05ds=,tag:SLrLXZV+T6pHvsTbrGGRxw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
